--- a/src/sign_backend/Cargo.toml
+++ b/src/sign_backend/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 ic-cdk = "0.12.0"
 ethers-core = "0.6.1"
+ic-cdk-timers = "0.3" 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hex = "0.4.3"
@@ -30,3 +31,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 ethers = "2.0" 
 num-bigint = "0.4"
 lazy_static = "1.4"
+ethereum-types = "0.11" 
+tokio = { version = "1", features = ["full"] } 
+bs58 = "0.4"
+
