--- a/src/sign_backend/Cargo.toml
+++ b/src/sign_backend/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 ic-cdk = "0.12.0"
 ethers-core = "0.6.1"
+base64 = "0.21"
 ic-cdk-timers = "0.3" 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -32,6 +33,6 @@ ethers = "2.0"
 num-bigint = "0.4"
 lazy_static = "1.4"
 ethereum-types = "0.11" 
-
 bs58 = "0.4"
+
 
